Add account skill levels and allow users to create pickup groups
